chenged path for imgs

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(../img/projects/project1.jpg);">
+                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(./img/projects/project1.jpg);">
                                 <div class="projects__address-wrap projects__address-wrap_hid-desc">
                                     <svg style="fill: #FFFFFF;" class="projects__icon">
                                         <use xlink:href="img/sprite.svg#geo"></use>
