chenged all path for imgs

--- a/township.html
+++ b/township.html
@@ -37,8 +37,8 @@
         </div>
     </header>
     <main>
-        <section style="background-image: url(../img/tonwship-banner/banner1.jpg);" class="township-banner">
-            <div style="background-image: url(../img/tonwship-banner/banner2.jpg);" class="township-banner__bg">
+        <section style="background-image: url(./img/tonwship-banner/banner1.jpg);" class="township-banner">
+            <div style="background-image: url(./img/tonwship-banner/banner2.jpg);" class="township-banner__bg">
                 <div class="container">
                     <div class="township-banner__wrap">
                         <div class="township-banner__wrap-tit">
@@ -106,19 +106,19 @@
                     </div>
                 </div>
                 <div class="township-info__benefits">
-                    <div class="township-info__benefit" style="background-image: url(../img/tonwship-bg/benefits/benefit1.jpg);">
+                    <div class="township-info__benefit" style="background-image: url(./img/tonwship-bg/benefits/benefit1.jpg);">
                         <span>развитая инфраструктура</span>
                     </div>
-                    <div class="township-info__benefit" style="background-image: url(../img/tonwship-bg/benefits/benefit2.jpg);">
+                    <div class="township-info__benefit" style="background-image: url(./img/tonwship-bg/benefits/benefit2.jpg);">
                         <span>центральное газоснабжение</span>
                     </div>
-                    <div class="township-info__benefit" style="background-image: url(../img/tonwship-bg/benefits/benefit3.jpg);">
+                    <div class="township-info__benefit" style="background-image: url(./img/tonwship-bg/benefits/benefit3.jpg);">
                         <span>расположение в черте города</span>
                     </div>
-                    <div class="township-info__benefit" style="background-image: url(../img/tonwship-bg/benefits/benefit4.jpg);">
+                    <div class="township-info__benefit" style="background-image: url(./img/tonwship-bg/benefits/benefit4.jpg);">
                         <span>экологичность</span>
                     </div>
-                    <div class="township-info__benefit" style="background-image: url(../img/tonwship-bg/benefits/benefit5.jpg);">
+                    <div class="township-info__benefit" style="background-image: url(./img/tonwship-bg/benefits/benefit5.jpg);">
                         <span>Индивидуальное жилищное строительство</span>
                     </div>
                 </div>
