--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(../img/projects/project2.jpg);">
+                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(./img/projects/project2.jpg);">
                                 <div class="projects__address-wrap projects__address-wrap_hid-desc">
                                     <svg style="fill: #FFFFFF;" class="projects__icon">
                                         <use xlink:href="img/sprite.svg#geo"></use>
@@ -331,7 +331,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(../img/projects/project3.jpg);">
+                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(./img/projects/project3.jpg);">
                                 <div class="projects__address-wrap projects__address-wrap_hid-desc">
                                     <svg style="fill: #FFFFFF;" class="projects__icon">
                                         <use xlink:href="img/sprite.svg#geo"></use>
@@ -406,7 +406,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(../img/projects/project4.jpg);">
+                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(./img/projects/project4.jpg);">
                                 <div class="projects__address-wrap projects__address-wrap_hid-desc">
                                     <svg style="fill: #FFFFFF;" class="projects__icon">
                                         <use xlink:href="img/sprite.svg#geo"></use>
@@ -481,7 +481,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(../img/projects/project5.jpg);">
+                            <div class="projects__col projects__col_pad projects__bg" style="background-image: url(./img/projects/project5.jpg);">
                                 <div class="projects__address-wrap projects__address-wrap_hid-desc">
                                     <svg style="fill: #FFFFFF;" class="projects__icon">
                                         <use xlink:href="img/sprite.svg#geo"></use>
