--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                             <span class="projects__number-text">Окончание строительства</span>
                                         </div>
                                     </div>
-                                    <a class="btn btn_while-black ml-a" href="">Выбрать дом</a>
+                                    <a class="btn btn_while-black ml-a" href="township.html">Выбрать дом</a>
                                 </div>
                             </div>
                         </div>
@@ -278,7 +278,7 @@
                                             <span class="projects__number-text">Окончание строительства</span>
                                         </div>
                                     </div>
-                                    <a class="btn btn_while-black ml-a" href="">Выбрать дом</a>
+                                    <a class="btn btn_while-black ml-a" href="township.html">Выбрать дом</a>
                                 </div>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                                             <span class="projects__number-text">Окончание строительства</span>
                                         </div>
                                     </div>
-                                    <a class="btn btn_while-black ml-a" href="">Выбрать дом</a>
+                                    <a class="btn btn_while-black ml-a" href="township.html">Выбрать дом</a>
                                 </div>
                             </div>
                         </div>
@@ -428,7 +428,7 @@
                                             <span class="projects__number-text">Окончание строительства</span>
                                         </div>
                                     </div>
-                                    <a class="btn btn_while-black ml-a" href="">Выбрать дом</a>
+                                    <a class="btn btn_while-black ml-a" href="township.html">Выбрать дом</a>
                                 </div>
                             </div>
                         </div>
@@ -503,7 +503,7 @@
                                             <span class="projects__number-text">Окончание строительства</span>
                                         </div>
                                     </div>
-                                    <a class="btn btn_while-black ml-a" href="">Выбрать дом</a>
+                                    <a class="btn btn_while-black ml-a" href="township.html">Выбрать дом</a>
                                 </div>
                             </div>
                         </div>
