fixed map and slick

--- a/contacts.html
+++ b/contacts.html
@@ -50,7 +50,7 @@
                         <a href="mailto:info@gk-nvm.ru" class="contacts__mail">info@gk-nvm.ru</a>
                     </div>
                 </div>
-                <div class="contacts__map" id="contacts-map" style="width: 50%; height: 800px;"></div>
+            <div class="contacts__map" id="contacts-map" style="width: 50%; height: 800px;"></div>
             </div>
             <div class="contacts__form-wrap">
                 <h2 class="contacts__form-title">Свяжитесь с нами</h2>
@@ -130,9 +130,11 @@
     <script src="js/assets/jquery-3.6.0.min.js"></script>
     <script src="js/assets/jquery.validate.min.js"></script>
     <script src="js/assets/jquery.maskedinput.min.js"></script>
+    <script src="js/assets/slick.min.js"></script>
      <!-- подключение ЯндексКарта -->
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
     <script src="js/script.js"></script>
+    <script src="js/contacts-map.js"></script>
 </body>
 
 </html>
