--- a/township.html
+++ b/township.html
@@ -519,6 +519,7 @@
     <script src="js/assets/slick.min.js"></script>
 
     <script src="js/script.js"></script>
+    <script src="js/township-map.js"></script>
 </body>
 
 </html>
