--- a/index.html
+++ b/index.html
@@ -723,6 +723,8 @@
     <script src="js/assets/jquery.validate.min.js"></script>
     <script src="js/assets/jquery.maskedinput.min.js"></script>
     <script src="js/assets/slick.min.js"></script>
+     <!-- подключение ЯндексКарта -->
+     <!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script> -->
     <script src="js/script.js"></script>
 </body>
 
